--- a/examples/HelloWorld/Makefile
+++ b/examples/HelloWorld/Makefile
@@ -13,7 +13,7 @@ debug: server
 server:
 	mkdir -p $(DST_DIR)
 	rsync -a lib/private/* $(DST_DIR)/ --exclude='.*'
-	haxe $(DEBUG) -js $(DST_DIR)/index.js -lib nodejs -D nodejs -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
+	haxe $(DEBUG) -js $(DST_DIR)/index.js -lib nodejs -D server -D nodejs -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
 
 .PHONY: clean
 clean:
