Add client script generator to Makefile

--- a/examples/HelloWorld/Makefile
+++ b/examples/HelloWorld/Makefile
@@ -5,15 +5,16 @@ MAIN_CLASS=Application
 CFLAGS=--dead-code-elimination
 DEBUG=
 
-all: server
+all: run
 
 debug: DEBUG = -debug
-debug: server
+debug: run
 
-server:
+run:
 	mkdir -p $(DST_DIR)
 	rsync -a lib/private/* $(DST_DIR)/ --exclude='.*'
 	haxe $(DEBUG) -js $(DST_DIR)/index.js -lib nodejs -D server -D nodejs -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
+	haxe $(DEBUG) -js $(DST_DIR)/index.js.client -D client -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
 
 .PHONY: clean
 clean:
