Enable source maps by default, allow to debug the client in the browser

--- a/examples/HelloWorld/Makefile
+++ b/examples/HelloWorld/Makefile
@@ -5,10 +5,10 @@ MAIN_CLASS=Application
 CFLAGS=--dead-code-elimination
 DEBUG=
 
+all: DEBUG = -debug
 all: run
 
-debug: DEBUG = -debug
-debug: run
+release: run
 
 run:
 	mkdir -p $(DST_DIR)
