--- a/examples/HelloWorld/Makefile
+++ b/examples/HelloWorld/Makefile
@@ -12,7 +12,7 @@ release: run
 
 run:
 	mkdir -p $(DST_DIR)
-	rsync -a lib/private/* $(DST_DIR)/ --exclude='.*'
+	rsync -a lib/* $(DST_DIR)/ --exclude='.*'
 	haxe $(DEBUG) -js $(DST_DIR)/index.js -lib nodejs -D server -D nodejs -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
 	haxe $(DEBUG) -js $(DST_DIR)/index.js.client -D client -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
 
