Remove js.Node depenendencies from the examples

--- a/examples/AuthTest/Makefile
+++ b/examples/AuthTest/Makefile
@@ -13,7 +13,7 @@ release: run
 run:
 	mkdir -p $(DST_DIR)
 	rsync -a lib/* $(DST_DIR)/ --exclude='.*'
-	haxe $(DEBUG) -js $(DST_DIR)/index.js -lib nodejs -D server -D nodejs -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
+	haxe $(DEBUG) -js $(DST_DIR)/index.js -D server -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
 
 .PHONY: clean
 clean:
