--- a/examples/HelloWorld/Makefile
+++ b/examples/HelloWorld/Makefile
@@ -12,9 +12,7 @@ release: run
 
 run:
 	mkdir -p $(DST_DIR)
-	rsync -a lib/* $(DST_DIR)/ --exclude='.*'
-	haxe $(DEBUG) -js $(DST_DIR)/index.js -D server -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
-	haxe $(DEBUG) -js $(DST_DIR)/index.js.client -D client -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
+	haxe $(DEBUG) -lib nodejs -js $(DST_DIR)/index.js -D nodejs -D server -cp $(SRC_DIR) -cp ../../src -main $(MAIN_CLASS) $(CFLAGS)
 
 .PHONY: clean
 clean:
